<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/question"
            android:text="@string/question_two" />

        <View style="@style/divider"></View>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/q2_radio_group">
            <RadioButton
                android:id="@+id/q2_true"
                style="@style/radio_button"
                android:text="@string/true_radio_button"/>
            <RadioButton
                android:id="@+id/q2_false"
                style="@style/radio_button"
                android:text="@string/false_radio_button"/>

        </RadioGroup>

    </LinearLayout>

    <RelativeLayout style="@style/bottom_layout">

        <Button
            style="@style/last_button"
            android:id="@+id/q2_last_button"/>

        <TextView
            style="@style/question_number"
            android:text="@string/two_of_five" />

        <Button
            style="@style/next_button"
            android:id="@+id/q2_next_button"/>


    </RelativeLayout>
</RelativeLayout>